add keyeword function for keyword